[tool.poetry]
package-mode = false
name = "data-sharing-barter-incentives-forecast"
version = "0.1.0"
description = "Collaborative analytics for the Energy Sector based on innovative collaborative forecasting algorithms that improve renewable energy predictability by combining data from different data owners."
authors = ["Jose Andrade <jose.r.andrade@inesctec.pt>", "Andre Garcia <andre.f.garcia@inesctec.pt>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
numpy = "^1.26.4"
loguru = "^0.7.2"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.25"
joblib = "^1.3.2"
pingouin = "^0.5.4"
fire = "^0.5.0"
payment = { git = "https://gitlab.inesctec.pt/data-sharing-barter-incentives/payment-service.git" }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
